--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
 development:
-  adapter: mysql
+  adapter: postgresql
   database: todo_db
   host: localhost
-  username: root
+  username: elements
   password:
   reconnect: true
 
@@ -10,17 +10,17 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql
+  adapter: postgresql
   database: todo_db_test
   host: localhost
-  username: root
+  username: elements
   password:
   reconnect: true
 
 production:
-  adapter: mysql
+  adapter: postgresql
   database: todo_db
   host: localhost # TODO: change this after server setup
-  username: todo
-  password: 0urAm@z1ngT0doP@55wrd
+  username: elements
+  password:
   reconnect: true
