--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
-  database: todo_db
+  database: elements_db
   host: localhost
   username: elements
   password:
@@ -11,7 +11,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: todo_db_test
+  database: elements_db_test
   host: localhost
   username: elements
   password:
@@ -19,8 +19,8 @@ test:
 
 production:
   adapter: postgresql
-  database: todo_db
-  host: localhost # TODO: change this after server setup
+  database: elements_db
+  host: localhost
   username: elements
   password:
   reconnect: true
