--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ development:
   adapter: postgresql
   database: elements_db
   host: localhost
-  username: elements
+  username:
   password:
   reconnect: true
 
@@ -13,7 +13,7 @@ test:
   adapter: postgresql
   database: elements_db_test
   host: localhost
-  username: elements
+  username:
   password:
   reconnect: true
 
@@ -21,6 +21,6 @@ production:
   adapter: postgresql
   database: elements_db
   host: localhost
-  username: elements
+  username:
   password:
   reconnect: true
