--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,7 @@ development:
   username:
   password:
   reconnect: true
+  min_messages: WARNING
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -16,6 +17,7 @@ test:
   username:
   password:
   reconnect: true
+  min_messages: WARNING
 
 production:
   adapter: postgresql
@@ -24,3 +26,4 @@ production:
   username:
   password:
   reconnect: true
+  min_messages: WARNING
